layout issues: iframe height and overflow

--- a/app/static/stylesheets/style.css
+++ b/app/static/stylesheets/style.css
@@ -12,7 +12,7 @@ body {
     width: 100vw;
     min-height: 100vh;
     background-repeat: no-repeat;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .navbar-brand img {
@@ -35,7 +35,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 70vh;
 }
 
 .accordion {
